<resources>
    <string name="app_name">Tawfiq(The food donation app)</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboardpics">dashboardpics</string>
    <string name="tawfiq_name">Tawfiq</string>
    <string name="donate_icon">DonateIcon</string>
    <string name="receiveicon">Receive Icon</string>
    <string name="foodmap_icon">FOOD MAP</string>
    <string name="mypin_icon">MYPIN</string>
    <string name="history_icon">HISTORY ICON</string>
    <string name="aboutus_icon">About Us</string>
    <string name="contactus_icon">Contact Us</string>
    <string name="logout_icon">LOGOUT ICON</string>
    <string name="donate">Donate</string>
    <string name="receive">Receive</string>
    <string name="food_map">Food Map</string>
    <string name="my_pins">My Pins</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Log Out</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_food_items">Enter Food Items</string>
    <string name="enter_phone_num">Enter Phone Num</string>
    <string name="donatedash">Donate</string>
    <string name="receivename">Receive</string>
    <string name="enter_receiver_name">Enter Receiver Name</string>
    <string name="receivehint">Receive</string>
    <string name="map_food">Food Map</string>
    <string name="share_this_app">share This App</string>
    <string name="tawfiq_a_pakistani_food_donation_app_connects_donors_with_those_in_need_reducing_food_waste_and_hunger_while_enabling_impact_tracking">Tawfiq, a Pakistani food donation app, connects donors with those in need, reducing food waste and hunger while enabling impact tracking.</string>
    <string name="facebook">Facebook</string>
    <string name="fbicon">Facebook Icon</string>
    <string name="linkeilnicon">Linkedin Icon</string>
    <string name="linkedin">Linkedin</string>
    <string name="enter_your_name_contact">Enter Your Name Contact</string>
    <string name="write_your_email_here">Write your Email here.....</string>
    <string name="write_your_message_here">Write your message here.....</string>
    <string name="write_your_name_here">Write your name here...</string>
    <string name="contactxmlicon">Contact xml icon</string>
    <string name="submit">Submit</string>
    <string name="title_activity_tabview">tabview</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="enter_your_namedonate">Enter your name</string>
    <string name="enter_your_food_items_donate">Enter your food items</string>
    <string name="enter_your_phone_number_doante">Enter your phone number</string>
    <string name="donate_donate_activity">Donate</string>
    <string name="food_items_donate_activity">Food Items</string>
    <string name="your_name_donate_activity">Your Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="creat_account">Creat account</string>
    <string name="login">Login</string>
    <string name="not_an_account">Not an Account?</string>
    <string name="enter_your_password">Enter Your Password...</string>
    <string name="enter_your_email">Enter Your Email...</string>
    <string name="loginbtn">Login</string>
    <string name="imagelogin">Image Login</string>
    <string name="creat_account_reg">Registeration</string>
    <string name="email_reg">Email </string>
    <string name="image_reg">Image Registeration</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="creat_account_btn">Creat Account </string>
    <string name="Splash_image">splash image</string>
    <string name="al_khidmat_foundation_is_a_non_profit_organization_based_in_lahore_that_focuses_on_a_wide_range_of_humanitarian_services_across_pakistan">Al-Khidmat Foundation is a non-profit organization based in Lahore, that focuses on a wide range of humanitarian services across Pakistan.</string>
    <string name="the_edhi_foundation_led_by_mr_abdul_sattar_edhi_and_mrs_bilquis_edhi_is_globally_renowned_and_has_garnered_numerous_awards_for_their_inclusive_humanitarian_work">The Edhi Foundation, led by Mr. Abdul Sattar Edhi and Mrs. Bilquis Edhi, is globally renowned and has garnered numerous awards for their inclusive humanitarian work.</string>
    <string name="shaukat_khanum_cancer_hospital_founded_by_imran_khan_is_a_prominent_healthcare_trust_in_pakistan_driven_by_his_commitment_to_addressing_the_challenges_of_cancer">Shaukat Khanum Cancer Hospital, founded by Imran Khan, is a prominent healthcare trust in Pakistan, driven by his commitment to addressing the challenges of cancer.</string>
    <string name="chhipa_welfare_association_is_also_one_of_the_very_efficient_trust_organizations_in_pakistan_founded_in_2007_by_ramzan_chhipa">Chhipa Welfare Association is also one of the very efficient trust organizations in Pakistan, founded in 2007 by Ramzan Chhipa.</string>
    <string name="jafaria_disaster_management_cell_jdc_welfare_organization_is_working_as_an_independent_non_government_non_profit_and_charitable_organization">Jafaria Disaster Management Cell (JDC) Welfare organization is working as an independent, non-government, non-profit and charitable organization.</string>
    <string name="saylani_welfare_international_trust_has_been_working_since_1999_to_improve_the_conditions_of_the_less_privileged_helpless_and_handicapped_individuals">Saylani Welfare International Trust has been working since 1999 to improve the conditions of the less privileged, helpless, and handicapped individuals.</string>
    <string name="donate_now">Donate Now</string>
    <string name="donate_now_khidmat">Donate Now</string>
    <string name="donate_now_skhospital">Donate Now</string>
    <string name="donate_now_saylani">Donate Now</string>
    <string name="donate_now_jdc">Donate Now</string>
    <string name="donate_now_chipa">Donate Now</string>
    <string name="pakistan_stands_at_99_in_global_hunger_index">Pakistan stands at 99 in Global Hunger Index</string>
    <string name="pakistan_ipc_acute_food_insecurity_snapshot">Pakistan: IPC Acute Food Insecurity Snapshot.</string>
    <string name="one_in_five_children_in_pakistan_is_suffering_from_wasting_says_unocha_report">One in five children in Pakistan is suffering from wasting, says UNOCHA report.</string>
    <string name="why_is_pakistan_ranked_99th_on_the_global_hunger_index">Why is Pakistan ranked 99th on the Global Hunger Index?</string>
    <string name="we_d_have_died_of_hunger_the_charity_kitchens_feeding_millions_in_pakistan">‘We’d have died of hunger’: the charity kitchens feeding millions in Pakistan.</string>
    <string name="world_should_take_notice_as_hunger_fears_spread_to_pakistan">World should take notice as hunger fears spread to Pakistan.</string>
    <string name="devastating_floods_in_pakistan">Devastating floods in Pakistan.</string>
    <string name="food_pushes_pakistan_inflation_to_record_36_4">Food pushes Pakistan inflation to record 36.4%.</string>
    <string name="floods_force_evacuation_of_almost_100_000_in_pakistan">Floods force evacuation of almost 100,000 in Pakistan.</string>
    <string name="more_than_3_4m_children_in_pakistan_facing_chronic_hunger">More than 3.4m children in Pakistan facing chronic hunger</string>
    <string name="wheat_flour_bread_prices_skyrocket_as_food_inflation_grips_pakistan">Wheat flour, bread prices skyrocket as food inflation grips Pakistan</string>
    <string name="how_are_the_children_of_pakistan_s_2022_floods_faring">How are the children of Pakistan’s 2022 floods faring?</string>
    <string name="food_and_fuel_prices_push_pakistan_s_short_term_inflation_to_9_month_high_at_3_73">Food and fuel prices push Pakistan’s short-term inflation to 9-month high at 3.73%.</string>
    <string name="food_items">Food Items </string>
</resources>