<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/themeappbg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvDashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Dashboard"
        android:textColor="@color/material_dynamic_primary40"
        android:textSize="40dp"
        android:textStyle="bold" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="4">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDonate"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/border_selector"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/donate_icon"
                android:src="@drawable/donateicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:text="@string/donate"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardReceive"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/border_selector"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/receiveicon"
                android:src="@drawable/receiveicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:text="@string/receive"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardhistory"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/border_selector"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/history_icon"
                android:src="@drawable/shareicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:text="History"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardDonationList"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/border_selector"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/donationlist_icon"
                android:src="@drawable/aboutusicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:text="@string/donation_list"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardContact"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_columnSpan="2"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/border_selector"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/contactus_icon"
                android:src="@drawable/googlemapslogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:text="Nearby Donations"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardProfile"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/border_selector"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@drawable/profilelogo2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:text="Profile"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardLogout"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/border_selector"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/logout_icon"
                android:src="@drawable/logouticon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:text="@string/log_out"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </GridLayout>


</LinearLayout>
